--- a/app/src/app/components/homeComponent/home.template.html
+++ b/app/src/app/components/homeComponent/home.template.html
@@ -1,8 +1,9 @@
 <div fxLayout="row wrap" fxLayoutAlign="center center" fxShow="true" fxHide="false">
   <div fxLayout="column wrap" class="maxHeight" fxFlex="100" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
-    <div fxLayout="row wrap" class="toolBar" fxLayoutAlign="center center" fxShow="true" fxHide="false">
-      <div fxLayout="column wrap" fxFlex="50" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
-        <h2 class="logoText">Claim In My Pocket</h2>
+    <div fxLayout="row wrap" class="toolBar" fxLayoutAlign="space-between center" fxShow="true" fxHide="false">
+      <div fxLayout="column wrap" class="logo" fxFlex="30" fxLayoutAlign="center start" fxShow="true" fxHide="false"><img imgSrc="Web/logo.png"></div>
+      <div fxLayout="column wrap" fxLayoutAlign="center end" fxShow="true" fxHide="false">
+        <mat-icon class="logoutIcon logoText" title="Logout" (click)="logout()">power_settings_new</mat-icon>
       </div>
     </div>
     <mat-tab-group class="homeTabGroup marginTop2" mat-stretch-tabs>
@@ -14,10 +15,17 @@
               <h1 class="textAlign amount">R {{fundvalue[0][&apos;fundvalueavailible&apos;]}}.00</h1>
             </div>
           </div>
-          <div fxLayout="row wrap" fxLayoutAlign="start stretch" fxShow="true" fxHide="false" *ngIf="noTransact">
-            <h3>No transactions yet...</h3>
+          <div fxLayout="row wrap" class="width100" fxLayoutAlign="start stretch" fxShow="true" fxHide="false" *ngIf="noTransact">
+            <div fxLayout="column wrap" class="width100" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
+              <div fxLayout="row wrap" fxLayoutAlign="center center" fxShow="true" fxHide="false">
+                <h3>No transactions yet...</h3>
+              </div>
+              <div fxLayout="row wrap" class="marginTop2 transactContainer" fxLayoutAlign="center center" fxShow="true" fxHide="false">
+                <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center center" fxShow="true" fxHide="false"><button mat-raised-button class="loginBtn">Claim Now</button></div>
+              </div>
+            </div>
           </div>
-          <div fxLayout="column wrap" class="width100 transactContainer" fxLayoutGap=".5em" fxLayoutAlign="center center" fxShow="true" fxHide="false" *ngIf="!noTransact">
+          <div fxLayout="column wrap" class="width100" fxLayoutGap=".5em" fxLayoutAlign="center center" fxShow="true" fxHide="false" *ngIf="!noTransact">
             <div fxLayout="row wrap" class="width100 transactions" fxLayoutAlign="center center" fxShow="true" fxHide="false">
               <p>Transaction 1</p>
             </div>
@@ -26,6 +34,9 @@
             </div>
             <div fxLayout="row wrap" class="width100 transactions" fxLayoutAlign="center center" fxShow="true" fxHide="false">
               <p>Transaction 3</p>
+            </div>
+            <div fxLayout="row wrap" class="marginTop2 transactContainer width100" fxLayoutAlign="center center" fxShow="true" fxHide="false">
+              <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center center" fxShow="true" fxHide="false"><button mat-raised-button class="loginBtn">Claim Now</button></div>
             </div>
           </div>
         </div>
@@ -99,19 +110,19 @@
       </mat-tab>
       <mat-tab label="Configuration">
         <div fxLayout="column wrap" class="tabInnerContainer marginTopBottom2" fxLayoutGap="2em" fxLayoutAlign="center center" fxShow="true" fxHide="false">
-          <mat-card *ngFor="let config of configurations" class="width80 transCards">
+          <mat-card *ngFor="let config of configurations; let i = index;" class="width80 transCards configCards">
             <mat-card-content>
               <div fxLayout="column wrap" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
                 <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxShow="true" fxHide="false">
                   <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
                     <mat-form-field>
-                      <input matInput placeholder="Contribution Percentage" value="{{config.contributionPercentage}}%" required readonly="true">
+                      <input matInput placeholder="Contribution Percentage" value="{{config.contributionPercentage}}%" required readonly="{{config.readOnly}}">
 
                     </mat-form-field>
                   </div>
                   <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
                     <mat-form-field>
-                      <input matInput placeholder="Contribution Type" value="{{config.contributionType}}" required readonly="true">
+                      <input matInput placeholder="Contribution Type" value="{{config.contributionType}}" required readonly="{{config.readOnly}}">
 
                     </mat-form-field>
                   </div>
@@ -119,16 +130,20 @@
                 <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxShow="true" fxHide="false">
                   <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
                     <mat-form-field>
-                      <input matInput placeholder="Contribution Value" value="R {{config.contributionValue}}.00" required readonly="true">
+                      <input matInput placeholder="Contribution Value" value="R {{config.contributionValue}}.00" required readonly="{{config.readOnly}}">
 
                     </mat-form-field>
                   </div>
                   <div fxLayout="column wrap" fxFlex="48" fxLayoutAlign="start center" fxShow="true" fxHide="false">
                     <mat-form-field>
-                      <input matInput placeholder="Ref Number" value="{{config.referenceNumber}}" required readonly="true">
+                      <input matInput placeholder="Ref Number" value="{{config.referenceNumber}}" required readonly="{{config.readOnly}}">
 
                     </mat-form-field>
                   </div>
+                </div>
+                <div fxLayout="row wrap" class="marginTop2" fxLayoutAlign="space-between center" fxShow="true" fxHide="false">
+                  <div fxLayout="column wrap" fxFlex="45" fxLayoutAlign="center center" fxShow="true" fxHide="false"><button mat-raised-button class="editBtn" *ngIf="!config[&apos;showSubmit&apos;]" (click)="editConfig(config);">Edit Config</button><button mat-raised-button class="editBtn" *ngIf="config[&apos;showSubmit&apos;]" (click)="submitConfig(config)">Submit Config</button></div>
+                  <div fxLayout="column wrap" fxFlex="45" fxLayoutAlign="center center" fxShow="true" fxHide="false"><button mat-raised-button class="cancelBtn" (click)="cancelConfigEdit(config)">Cancel</button></div>
                 </div>
               </div>
             </mat-card-content>
