--- a/app/src/app/components/loginComponent/login.template.html
+++ b/app/src/app/components/loginComponent/login.template.html
@@ -1,5 +1,6 @@
 <div fxLayout="row wrap" class="maxHeight" fxLayoutAlign="center center" fxShow="true" fxHide="false">
   <div fxLayout="column wrap" fxFlex="70" fxLayoutAlign="start stretch" fxShow="true" fxHide="false" fxFlex.xs="100">
+    <div fxLayout="column wrap" class="loginImg" fxFlex="70" fxLayoutAlign="center center" fxShow="true" fxHide="false"><img imgSrc="Web/logo.png"></div>
     <form *ngIf="!hasAccount" #registerForm="ngForm" class="loginForm">
       <div fxLayout="row wrap" fxLayoutAlign="center center" fxShow="true" fxHide="false">
         <h1 class="loginH1">Register</h1>
